Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-992

Naming convention in C# constructor is not consistent with other fields causes compile errors

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 0.5
    • 0.6
    • C# - Compiler
    • None
    • Using the windows binary release of thrift-0.5.0.exe on Windows 7 64-bit

    Description

      While updating my FluentCassandra project using the latest Thrift-0.5.0.exe generator against the 0.7 Beta3 release of cassandra.thrift I experienced a generation problem that caused compiler errors when compiling the C# code. It appears the constructor fields are using the old naming convention for the fields, while every other part of the class seems to be using the new naming convention for fields with underscores.

      You can see a diff of the files I had to manually edit here:
      https://github.com/managedfusion/fluentcassandra/commit/d2d26f0bfd158cae3c39fd9cd47ec9097bc394f6

      The paths starting with "FluentCassandra/Apache/Cassandra" should be the ones that you need to worry about for this bug.

      Attachments

        1. cassandra.thrift
          24 kB
          Nick Berardi
        2. thrift.exe
          3.15 MB
          Roger Meier
        3. THRIFT-992_add_underline.patch
          0.6 kB
          Roger Meier

        Issue Links

          Activity

            People

              roger Roger Meier
              nberardi Nick Berardi
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: